# keycloak-agent-identity

./: .gitignore  README.md  config.json  pyproject.toml  run_keycloak.py  run_spire.py
keycloak/: boot_keycloak.py  docker-compose.yml  requirements.txt  setup_keycloak.py
spire/: test-spiffe-authentication.sh  test-spiffe-dcr.sh
