[project]
name = "keycloak-agent-identity"
version = "0.1.0"
description = "Keycloak and SPIRE integration for agent-based identity management"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "requests>=2.25.0",
]
requires-python = ">=3.8"

[project.scripts]
keycloak = "run_keycloak:main"
spire = "run_spire:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["keycloak"]

[tool.uv]
dev-dependencies = []
